add margin to heading, paragraph

--- a/topical.html
+++ b/topical.html
@@ -254,7 +254,8 @@
             </h3>
             <ul>
               <!-- En paragraph-tag brukt som en sub-heading -->
-              <p>
+              <!-- For at denne skal ligge likt som de andre p-taggene gis den en egen klasse-->
+              <p class="sub-heading-learning-outcomes">
                 Studenten kan håndtere følgende programmeringskonstruksjoner i
                 Java:
               </p>
