--- a/topical.html
+++ b/topical.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <!-- Her indikeres språket på nettsiden -->
 <html lang="no">
   <head>
@@ -252,13 +252,11 @@
             <h3>
               Ferdigheter
             </h3>
+            <p>
+              Studenten kan håndtere følgende programmeringskonstruksjoner i
+              Java:
+            </p>
             <ul>
-              <!-- En paragraph-tag brukt som en sub-heading -->
-              <!-- For at denne skal ligge likt som de andre p-taggene gis den en egen klasse-->
-              <p class="sub-heading-learning-outcomes">
-                Studenten kan håndtere følgende programmeringskonstruksjoner i
-                Java:
-              </p>
               <!-- Liste-elementer vises som 'bullet points' -->
               <li>
                 Operatorer og typer
@@ -270,7 +268,15 @@
                 Funksjoner (prodsedyrer) og metoder
               </li>
               <li>
-                Tabeller (arrayer)
+                Tabeller 
+                  (
+                  <button class="arrays-button">
+                    <a href="https://www.w3schools.com/java/java_arrays.asp"
+                    target="_blank">
+                      ARRAYER
+                    </a>
+                  </button>
+                  )
               </li>
               <li>
                 Klasser, konstruktører, og referanser
@@ -284,13 +290,13 @@
             </ul>
           </div>
           <div>
-            <!-- 'Unordered list' -->
             <h3>
               Generell kompetanse
             </h3>
             <p>
               Studenten kjenner til:
             </p>
+            <!-- 'Unordered list' -->
             <ul>
               <li>
                 grunnleggende prinsipper for oppbygging av programmer
