add/fjern header

--- a/topical.html
+++ b/topical.html
@@ -47,15 +47,9 @@
         </div>
       </div>
     </div>
-    <!-- Denne div'en inneholder heading og sub-heading -->
-      <div class="main-heading">
-        <h1>
-          DAPE1400 Programmering
-        </h1>
-        <p class="sub-heading">
-          Emneplan
-        </p>
-      </div>
+    <header>
+
+    </header>
       <div class="programming">
         <div class="informasjonsteknologi-image">
           <!-- Her ligger bildet som man ser på nettsiden -->
