add link to logo

--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
       <div class="banner-container">
         <!-- Denne diven inneholder logoen som vises øverst på venstre side av nettsiden vår -->
         <div class="oslomet-logo">
-          <!-- Logoen er kopiert fra: https://student.oslomet.no/o/oslomet-theme/images/oslomet-logo-black.svg -->
-          <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
+          <!-- Dette er en link til den kopierte logoen som er plassert i img-mappen -->
+          <!-- Bildet er gitt en alternativ tekst hvis den ikke kan vises på siden -->
+          <!-- Når du klikker på logoen tas du til oslomet.no -->
+          <a class="oslomet-logo" href="https://www.oslomet.no/"
+          target="_blank">
+            <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
+          </a>
         </div>
         <!-- Denne knappen er stylet slik at den gjøres om til den nettrekksmeny -->
         <!-- Nedtrekksmenyen inneholder linker til de øvrige sidene på nettstedet vårt -->
