--- a/campus.html
+++ b/campus.html
@@ -13,7 +13,13 @@
     <!-- The code is placed into divs throughout to style our webpage more easily -->
     <div class="banner-container">
       <div class="oslomet-logo">
-        <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
+        <!-- Dette er en link til den kopierte logoen som er plassert i img-mappen -->
+        <!-- Bildet er gitt en alternativ tekst hvis den ikke kan vises på siden -->
+        <!-- Når du klikker på logoen tas du til oslomet.no -->
+        <a class="oslomet-logo" href="https://www.oslomet.no/"
+        target="_blank">
+          <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
+        </a>
       </div>
       <!-- This is a button styled to make it into a dropdown menu and placed inside a div -->
       <!-- This dropdown menu links to the other pages on our website -->
