--- a/topical.html
+++ b/topical.html
@@ -23,7 +23,10 @@
       <div class="oslomet-logo">
         <!-- Dette er en link til den kopierte logoen som er plassert i img-mappen -->
         <!-- Bildet er gitt en alternativ tekst hvis den ikke kan vises på siden -->
-        <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
+        <a class="oslomet-logo" href="https://www.oslomet.no/"
+        target="_blank">
+          <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
+        </a>
       </div>
       <!-- Denne div'en inneholder en nedtrekksmeny  -->
       <!-- Nedtrekksmenyen inneholder linker til de øvrige sidene våre -->
