--- a/topical.html
+++ b/topical.html
@@ -23,6 +23,7 @@
       <div class="oslomet-logo">
         <!-- Dette er en link til den kopierte logoen som er plassert i img-mappen -->
         <!-- Bildet er gitt en alternativ tekst hvis den ikke kan vises på siden -->
+        <!-- Når du klikker på logoen tas du til oslomet.no. Linken åpnes i en ny Fane -->
         <a class="oslomet-logo" href="https://www.oslomet.no/"
         target="_blank">
           <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
@@ -51,7 +52,15 @@
       </div>
     </div>
     <header>
-
+      <!-- Denne div'en inneholder heading og sub-heading -->
+      <div class="main-heading">
+        <h1>
+          DAPE1400 Programmering
+        </h1>
+        <p class="sub-heading">
+          Emneplan
+        </p>
+      </div>
     </header>
       <div class="programming">
         <div class="informasjonsteknologi-image">
