--- a/accessibility.html
+++ b/accessibility.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="no">
+<html>
   <head>
     <title>
       DATA1200 - Hjemmeeksamen høst 2023 - Gruppe 24
@@ -7,54 +7,59 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
-    <!-- This is the yellow banner at the top of the page -->
-    <!-- The code is placed into divs throughout to style our webpage more easily -->
+    <!-- Dette er det gule banneret på toppen av siden -->
+    <!-- Innholdet er plasser i div'er gjennom hele koden for å style den lettere -->
     <div class="banner-container">
       <div class="oslomet-logo">
         <!-- Dette er en link til den kopierte logoen som er plassert i img-mappen -->
-        <!-- Bildet er gitt en alternativ tekst hvis den ikke kan vises på siden -->
+        <!-- Logoen er gitt en alternativ tekst som vises hvis siden ikke kan laste inn logoen -->
         <!-- Når du klikker på logoen tas du til oslomet.no. Linken åpnes i en ny fane -->
         <a class="oslomet-logo" href="https://www.oslomet.no/"
         target="_blank">
           <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
         </a>
       </div>
-      <!-- This is a button styled to make it into a dropdown menu and placed inside a div -->
-      <!-- This dropdown menu links to the other pages on our website -->
+      <!-- Dette er en knapp stylet slik at den er en nedtrekksmeny -->
+      <!-- Denne nedtrekksmenyen er den samme på alle sidene våre. Linkene er imidlertid ikke like for alle sidene -->
       <div class="dropdown">
         <button class="dropdown-button">
           Meny
         </button>
-        <div class="dropdown-content">
-          <!-- When you click this link it will take you to a page about the subject DAPE1400 -->
-          <!-- This tag makes the "link" clickable -->
-          <a href="topical.html">
-            Infoside: DAPE1400 Programmering
-          </a>
-          <!-- When you click this link it will take you ti a page about the OsloMet campuses -->
-          <a href="index.html">
-            Dette er OsloMet
-          </a>
-          <!-- When you click this link it will take you to a page with information about the accessibility of our webpage -->
-          <a href="campus.html">
-            OsloMet: våre studiesteder
-          </a>
-        </div>
+      <div class="dropdown-content">
+          <!-- Når du klikker på linken blir du tatt til en side om faget DAPE1400 -->
+          <!-- Dette gjør linken klikkbar -->
+        <a href="topical.html">
+          Infoside: DAPE1400 Programmering
+        </a>
+        <!-- Link til side om OsloMet campuser -->
+        <a href="index.html">
+          Dette er OsloMet
+        </a>
+        <!-- Link til side om OsloMet campuser -->
+        <a href="campus.html">
+          OsloMet: våre studiesteder
+        </a>
       </div>
+    </div>
   </div>
-
-  <div class="main-heading">
-    <h1>
-      Accessibility-side
-    </h1>
-  </div>
+  <!-- Overskriften på siden -->
+    <div class="main-heading">
+      <h1>
+        Accessibility-side
+      </h1>
+    </div>
+    <!-- Dette er teksten under overskriften, brukt som en slags underoverskrift-->
   <div class="sub-heading">
     <p>
       Vi har kjørt accessibility test gjennom lighthouse i google chrome. Dette gjøres for å sjekke hvor
       universelt utformet en nettside er. Likevel har denne testen begrensninger. Nedenfor er det derfor en 
       liste over ting testen ikke beregner score ut fra, men som forbedrer universell utforming.
+      <!-- En 'unordered list' som sørger for at listeelementene vises som bullet points på siden -->
       <ul>
         <li>
           Vi har ikke plassert tekst inne i bilder for å gjøre det enklere for folk med nedsatt syn
@@ -77,120 +82,196 @@
       </ul>
     </p>
   </div>
-
-  <!-- The different information on the page is categorized and placed in checkboxes/toggle-boxes-->
+  <!-- Accessibility testen for hver av sidene våre er lagt i checkbokser -->
+  <!-- Koden for checkboksene er lik som koden for checkboksene på de andre sidene og styles likt i CSS'en -->
   <div class="innledning-checkbox">
+    <!-- Hvert input og label på gis en unik id og for. Dette er slik at man skal kunne åpne checkboksene. -->
+    <!-- Dette er checkboks 1 -->
     <input type="checkbox" id="title-4" />
-    <!-- The label shows the title of the checkbox-->
-    <label for="title-4">
-      <!-- This heading is shown both when the checkbox is "open" and closed -->
-      <h2>
-        Accessibility test index.html
-      </h2>
-    </label>
-    <!-- This is the container of the content inside the "innledning"-checkbox -->
-    <!-- This is only shown when the checkbox is open -->
+    <!-- Dette vises som "tittelen" til checkboksen -->
+      <label for="title-4">
+      <!-- Denne headingen vises både når boksen er åpen og lukket -->
+        <h2>
+          Accessibility test index.html
+        </h2>
+      </label>
+      <!-- Dette er en boks for innholdet i checkboksen -->
+      <!-- Dette vises kun når boksen er åpen -->
     <div class="content">
-      <div class="accessibility-test-flex">
-        <div class="accessibility-test-bildeslideshow">
-          <a target="_blank" href="img/accessibility-test-85.png">
-            <img class="bilder-til-slideshow" src="img/accessibility-test-85.png" alt="Bilde av accessibility testen hvor vi fikk 85% accessibility score">
-          </a>
-          <div class="beskrivelse-av-bildet">
-            Bilde av accessibility testen vi kjørte først og fikk 85%
-          </div>
-
-          <a target="_blank" href="img/Code before.jpg">
-            <img class="bilder-til-slideshow" src="img/Code before.jpg" alt="OsloMet logoen uten alt tekst">
-          </a>
-          <div class="beskrivelse-av-bildet">
-            OsloMet logoen uten "alt" tekst
-          </div>
-
-          <a target="_blank" href="img/Code after.jpg">
-            <img class="bilder-til-slideshow" src="img/Code after.jpg" alt="OsloMet logoen med alt tekst">
-          </a>
-          <div class="beskrivelse-av-bildet">
-            OsloMet logoen med "alt" tekst
-          </div>
-
-          <a target="_blank" href="img/accessibility_index.jpg">
-            <img class="bilder-til-slideshow" src="img/accessibility_index.jpg" alt="Accessibility testen etter at det ble lagt til alt tekst og vi fikk 97% score">
-          </a>
-          <div class="beskrivelse-av-bildet">
-            Accessibility testen etter at vi har lagt til "alt" tekst på OsloMet logoen og fikk 97% accessibility score.
+      <div id="accessibility-container" class="accessibility-container">
+        <!-- Innholdet i alle checkboksene er stylet nesten likt -->
+        <!-- Accessibility testene og koden er lagt i hver sin 'boks' Hver boks har en klasse box som er felles for alle boksene
+        og en klasse box-# som er unik for hver beholder/boks -->
+        <div class="box box-1">
+          <!-- Et screenshot av accessibility test -->
+          <img class="img" src="./img/accessibility-test-85.png"  
+          alt="accessibility test nr. 1" 
+          style="width: 100%;">
+        <div class="overlay">
+          <div class="text">
+            <!-- Link til en større versjon av testen. Denne åpnes i en tom fane -->
+            <!-- Tekst og heading er link til dette bildet -->
+            <a href="./img/accessibility-test-85.png" target="_blank">
+              <p>
+                Testen viser at vi mangler en alternativ tekst for OsloMet logoen, og accessibility scoren var 85.
+              </p>
+              <h3>
+                <i>
+                  Forstørr testen
+                </i>
+              </h3>
+            </a>
           </div>
         </div>
-  
-        
-        <div class="accessibility-test-tekst" class="accessibility-test-bilde"> 
-          <p>
-           Da vi kjørte vår første accessibility test av siden index.html. Fikk vi 85% accessibility, og vi leste 
-           testen og så at OsloMet logoen i banneret manglet en alt tekst. Dette la vi på og accessibility scoren
-           endret seg fra 85% til 97%. 
-         </p>
+      </div>
+      <div class="box box-2">
+        <img class="img" src="./img/Code before.jpg"  
+        alt="kode_før_endring" 
+        style="width: 100%;">
+          <div class="overlay">
+            <div class="text">
+              <a href="./img/Code before.jpg" target="_blank">
+                <p>
+                  Slik så koden ut uten alternativ tekst for bildet.
+                </p>
+                <h3>
+                  <i>
+                    Forstørr koden
+                  </i>
+                </h3>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="box box-3">
+          <img class="img" src="./img/Code after.jpg" 
+          alt="Kode_etter_endring"
+          style="width: 100%;">
+            <div class="overlay">
+              <div class="text">
+                <a href="./img/Code after.jpg" target="_blank">
+                  <p>
+                    Slik så koden ut etter vi la til alternativ tekst for OsloMet logoen.
+                  </p>
+                  <h3>
+                    <i>
+                      Forstørr koden
+                    </i>
+                  </h3>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="box box-4">
+            <img class="img" src="./img/accessibility_index.jpg" 
+            alt="Kode før"
+            style="width: 100%;">
+            <div class="overlay">
+              <div class="text">
+                <a href="./img/accessibility_index.jpg" target="_blank">
+                  <p>
+                    Testen viser en accessibility score på 97.
+                  </p>
+                  <h3>
+                    <i>
+                      Forstørr testen
+                    </i>
+                  </h3>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Dette er checkboks 2 -->
+    <div class="innledning-checkbox">
+      <input type="checkbox" id="title-5" />
+      <!-- The label shows the title of the checkbox-->
+        <label for="title-5">
+          <!-- This heading is shown both when the checkbox is "open" and closed -->
+          <h2>
+            Accessibility test topical.html
+          </h2>
+        </label>
+        <!-- This is the container of the content inside the "innledning"-checkbox -->
+        <!-- This is only shown when the checkbox is open -->
+      <div class="content">
+        <div id="accessibility-container" class="accessibility-container">
+          <div class="forklaring">
+            <h2>
+              Vi fikk samme "feil" som for index.html når vi kjørte accessibility test. 
+            </h2>
+          </div>
+          <div class="box box-5">
+            <img class="img" src="./img/accessibility_topical.jpg"  
+            alt="accessibility test" 
+            style="width: 100%;">
+              <div class="overlay">
+                <div class="text">
+                  <a href="./img/accessibility_topical.jpg" target="_blank">
+                    <p>
+                      Testen viser en score på 97 etter vi la til alternativ tekst for OsloMet logoen.
+                    </p>
+                    <h3>
+                      <i>
+                        Forstørr testen
+                      </i>
+                    </h3>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Dette er checkboks 3 -->
+        <div class="innledning-checkbox">
+          <input type="checkbox" id="title-6" />
+          <!-- The label shows the title of the checkbox-->
+          <label for="title-6">
+            <!-- This heading is shown both when the checkbox is "open" and closed -->
+            <h2>
+              Accessibility test campus.html
+            </h2>
+          </label>
+          <!-- This is the container of the content inside the "innledning"-checkbox -->
+          <!-- This is only shown when the checkbox is open -->
+          <div class="content">
+            <div id="accessibility-container" class="accessibility-container">
+              <div class="forklaring">
+                <h2>
+                  Vi fikk samme "feil" som for index.html og topical.html når vi kjørte accessibility test. 
+                </h2>
+              </div>
+              <div class="box box-6">
+                <img class="img" src="./img/accessibility_campus.jpg"  
+                alt="accessibility test" 
+                style="width: 100%;">
+              <div class="overlay">
+                <div class="text">
+                  <a href="./img/accessibility_campus.jpg" target="_blank">
+                    <p>
+                      Testen viser en score på 100 etter vi la til alternativ tekst for OsloMet logoen.
+                    </p>
+                    <h3>
+                      <i>
+                        Forstørr testen
+                      </i>
+                    </h3>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div> 
-      </div>
-    </div>
-  </div>
-  <!-- This is the second checkbox on the page -->
-  <div class="checkbox">
-    <input type="checkbox" id="title-5" />
-    <!-- The label contains the title of the checkbox -->
-    <label for="title-5">
-      <!-- This heading is shown both when the checkbox is open and closed -->
-      <h2>
-        Accessibility test topical.html
-      </h2>
-    </label>
-    <div class="content">
-      <div class="accessibility-test-flex">
-        <div class="accessibility-test-bilde">
-          <img src="img/accessibility_topical.jpg" alt="Accessibility-test av topical.html">
-        </div>
-        <div class="accessibility-test-tekst" class="accessibility-test-bilde">
-          <p>
-            Da vi kjørte accessibility test på siden topical.html hadde vi allerede lagt til en "alt" tekst på
-            OsloMet logoen og her fikk vi 97%.
-         </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div>
-    <!-- This is the third checkbox-->
-    <input type="checkbox" id="title-6" />
-    <!-- The label contains the title of the checkbox-->
-    <label for="title-6">
-      <!-- This heading is showed both when the checkbox is open and closed -->
-      <h2 class>
-        Accessibility test campus.html
-      </h2>
-    </label>
-    <div class="content">
-      <div class="accessibility-test-flex">
-        <div class="accessibility-test-bilde">
-          <img src="img/accessibility_campus.jpg" alt="Accessibility-test av campus.html">
-        </div>
-        <div class="accessibility-test-tekst" class="accessibility-test-bilde">
-          <p>
-            Da vi kjørte accessibility test på siden campus.html hadde vi allerede lagt til en "alt" tekst på
-            OsloMet logoen og her fikk vi 99%.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class = "footer">  
-    <footer>
-      <p class="forfattere">
-        Forfattere er: Iselin og Benedicte
-      </p>
-      <p class="eksamen">
-        Laget til eksamen, høsten 2023 i faget DATA1200 ved OsloMet.
-      </p>
-    </footer>
-  </div>
-  </body>
+        <div class = "footer">  
+          <footer>
+            <p class="forfattere">
+              Forfattere er: Iselin og Benedicte
+            </p>
+            <p class="eksamen">
+              Laget til eksamen, høsten 2023 i faget DATA1200 ved OsloMet.
+            </p>
+          </footer>
+        </div>        
+    </body>
 </html>
