Endret øverste div til en header

--- a/accessibility.html
+++ b/accessibility.html
@@ -14,39 +14,39 @@
   <body>
     <!-- Dette er det gule banneret på toppen av siden -->
     <!-- Innholdet er plasser i div'er gjennom hele koden for å style den lettere -->
-    <div class="banner-container">
+    <header class="banner-container">
       <div class="oslomet-logo">
-        <!-- Dette er en link til den kopierte logoen som er plassert i img-mappen -->
-        <!-- Logoen er gitt en alternativ tekst som vises hvis siden ikke kan laste inn logoen -->
-        <!-- Når du klikker på logoen tas du til oslomet.no. Linken åpnes i en ny fane -->
-        <a class="oslomet-logo" href="https://www.oslomet.no/"
-        target="_blank">
-          <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
-        </a>
+          <!-- Dette er en link til den kopierte logoen som er plassert i img-mappen -->
+          <!-- Logoen er gitt en alternativ tekst som vises hvis siden ikke kan laste inn logoen -->
+          <!-- Når du klikker på logoen tas du til oslomet.no. Linken åpnes i en ny fane -->
+          <a class="oslomet-logo" href="https://www.oslomet.no/"
+          target="_blank">
+            <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
+          </a>
+        </div>
+        <!-- Dette er en knapp stylet slik at den er en nedtrekksmeny -->
+        <!-- Denne nedtrekksmenyen er den samme på alle sidene våre. Linkene er imidlertid ikke like for alle sidene -->
+        <div class="dropdown">
+          <button class="dropdown-button">
+            Meny
+          </button>
+        <div class="dropdown-content">
+            <!-- Når du klikker på linken blir du tatt til en side om faget DAPE1400 -->
+            <!-- Dette gjør linken klikkbar -->
+          <a href="topical.html">
+            Infoside: DAPE1400 Programmering
+          </a>
+          <!-- Link til side om OsloMet campuser -->
+          <a href="index.html">
+            Dette er OsloMet
+          </a>
+          <!-- Link til side om OsloMet campuser -->
+          <a href="campus.html">
+            OsloMet: våre studiesteder
+          </a>
+        </div>
       </div>
-      <!-- Dette er en knapp stylet slik at den er en nedtrekksmeny -->
-      <!-- Denne nedtrekksmenyen er den samme på alle sidene våre. Linkene er imidlertid ikke like for alle sidene -->
-      <div class="dropdown">
-        <button class="dropdown-button">
-          Meny
-        </button>
-      <div class="dropdown-content">
-          <!-- Når du klikker på linken blir du tatt til en side om faget DAPE1400 -->
-          <!-- Dette gjør linken klikkbar -->
-        <a href="topical.html">
-          Infoside: DAPE1400 Programmering
-        </a>
-        <!-- Link til side om OsloMet campuser -->
-        <a href="index.html">
-          Dette er OsloMet
-        </a>
-        <!-- Link til side om OsloMet campuser -->
-        <a href="campus.html">
-          OsloMet: våre studiesteder
-        </a>
-      </div>
-    </div>
-  </div>
+    </header>
   <!-- Overskriften på siden -->
     <div class="main-heading">
       <h1>
