--- a/campus.html
+++ b/campus.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!-- Dette er det gule banneret på toppen av siden vår -->
-    <div class="banner-container">
+    <header class="banner-container">
       <div class="oslomet-logo">
         <!-- Dette er en link til den kopierte logoen som er plassert i img-mappen -->
         <!-- Bildet er gitt en alternativ tekst hvis den ikke kan vises på siden -->
@@ -40,7 +40,7 @@
           </a>
         </div>
       </div>
-  </div>
+    </header>
 
       <div class="main-heading">
         <h1>
