--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
       <!-- Dette er det gule banneret på toppen av siden -->
       <!-- Koden er plassert i div'er gjennomgående. Dette er for å style koden lettere -->
-      <div class="banner-container">
+      <header class="banner-container">
         <!-- Denne diven inneholder logoen som vises øverst på venstre side av nettsiden vår -->
         <div class="oslomet-logo">
           <!-- Dette er en link til den kopierte logoen som er plassert i img-mappen -->
@@ -48,7 +48,7 @@
             </a>
           </div>
         </div>
-    </div>
+      </header>
     <!-- Denne div'en inneholder heading og sub-heading -->
     <!-- Div'en er laget for å style bakgrunnen til begge headingene -->
       <div class="heading-container">
