--- a/topical.html
+++ b/topical.html
@@ -17,7 +17,7 @@
     <!-- All informasjon på denne siden er hentet fra: https://student.oslomet.no/en/studier/-/studieinfo/emne/DAPE1400/2020/H%C3%98ST-->
     <!-- Denne div'en inneholder det gule banneret på toppen av siden -->
     <!-- Koden er plassert i div'er gjennom hele nettsiden -->
-    <div class="banner-container">
+    <header class="banner-container">
       <!-- Logoen er kopiert fra: https://student.oslomet.no/o/oslomet-theme/images/oslomet-logo-black.svg-->
       <!-- Vi har brukt denne samme logoen på alle sidene -->
       <div class="oslomet-logo">
@@ -50,8 +50,8 @@
           </a>
         </div>
       </div>
-    </div>
-    <header>
+    </header>
+  
       <!-- Denne div'en inneholder heading og sub-heading -->
       <div class="main-heading">
         <h1>
@@ -61,7 +61,7 @@
           Emneplan
         </p>
       </div>
-    </header>
+    
       <div class="programming">
         <div class="informasjonsteknologi-image">
           <!-- Her ligger bildet som man ser på nettsiden -->
