--- a/topical.html
+++ b/topical.html
@@ -89,9 +89,9 @@
       <div class="grid-item">
         <div class="coursename-english">
           <div class="heading-coursename-english">
-            <h4>
+            <h2>
               Engelsk emnenavn
-            </h4>
+            </h2>
           </div>
           <div class="english-name">
             <p>
@@ -103,7 +103,7 @@
       <div class="grid-item">
         <div class="studyprogram">
           <div class="studieprogram">
-            <h4>
+            <h3>
               <!-- Denne tagen linker til studieoversikten på oslomet.no -->
               <!-- Denne åpnes i en ny fane-->
               <a class="heading-grid" 
@@ -111,10 +111,10 @@
               target="_blank">
                 Klikk her for å tas til OsloMets studieoversikt: <br>
               </a>
-            </h4>
-            <h4>
+            </h3>
+            <h3>
               Studieprogram
-            </h4>
+            </h3>
           </div>
           <div>
             <p>
@@ -129,9 +129,9 @@
       <div class="grid-item">
         <div class="points">
           <div class="omfang">
-            <h4>
+            <h3>
               Omfang
-            </h4>
+            </h3>
           </div>
           <div class="studypoints">
             <p>
@@ -143,9 +143,9 @@
       <div class="grid-item">
         <div class="study-years">
           <div class="studieår">
-            <h4>
+            <h3>
               Studieår
-            </h4>
+            </h3>
           </div>
           <div class="years">
             <p> 
@@ -242,9 +242,9 @@
                 <a class="java" 
                 href="https://www.w3schools.com/java/java_intro.asp"
                 target="_blank">
-                  Java,
+                  Java
                 </a> 
-                så forventes det at studenten kan overføre
+                , så forventes det at studenten kan overføre
                 sine kunnskaper til andre 
                 <!-- Link i tekst til informasjon om programmering: https://www.geeksforgeeks.org/introduction-of-programming-paradigms/ -->
                 <a class="programmeringsspråk"
