Lagt inn alt kommentarer på alle linker

--- a/campus.html
+++ b/campus.html
@@ -192,7 +192,7 @@
       <div class="footer">
         <footer>
           <p>
-            All informasjon på denne siden er hentet fra <a class= "kildelink" href="https://www.oslomet.no/om/studiesteder">OsloMet våre studiestader</a>.
+            All informasjon på denne siden er hentet fra <a class= "kildelink" href="https://www.oslomet.no/om/studiesteder" alt ="link til siden hvor teksten på siden er hentet fra">OsloMet våre studiestader</a>.
           </p>
           <p class="forfattere">
             Forfattere er: Iselin og Benedicte
