--- a/topical.html
+++ b/topical.html
@@ -249,7 +249,7 @@
                 <!-- Link i tekst til informasjon om programmering: https://www.geeksforgeeks.org/introduction-of-programming-paradigms/ -->
                 <a class="programmeringsspråk"
                 href="https://www.geeksforgeeks.org/introduction-of-programming-paradigms/"
-                target="_blank"> 
+                target="_blank" alt = "Link til en side kalt geeks for geeks med en introduksjon til programmeringsspråk"> 
                 imperative programmeringsspråk.
                 </a>
               </li>
@@ -280,7 +280,7 @@
                   (
                   <button class="arrays-button">
                     <a href="https://www.w3schools.com/java/java_arrays.asp"
-                    target="_blank">
+                    target="_blank" alt = "link til side med informasjon som java arrays">
                       ARRAYER
                     </a>
                   </button>
@@ -326,7 +326,7 @@
         <!-- Link til kilden vi har hentet tekst og bilde fra  -->
         <p>
           All informasjon på denne siden er hentet fra
-          <a class="kildelink" href="https://student.oslomet.no/studier/-/studieinfo/emne/DAPE1400/2022/H%C3%98ST">
+          <a class="kildelink" href="https://student.oslomet.no/studier/-/studieinfo/emne/DAPE1400/2022/H%C3%98ST" alt ="link til siden hvor teksten på siden er hentet fra">
             Studieinfo emne DAPE1400 2022 Programmering
             </a>
         </p>
