--- a/topical.html
+++ b/topical.html
@@ -108,6 +108,7 @@
               <!-- Denne åpnes i en ny fane-->
               <a class="heading-grid" 
               href="https://www.oslomet.no/studier/studieoversikt"
+              alt="Link til studieoversikten på OsloMet.no"
               target="_blank">
                 Klikk her for å tas til OsloMets studieoversikt: <br>
               </a>
@@ -177,6 +178,7 @@
           <!-- Når du klikker på linken tas du til en ny fane -->
           <a class="programmeringsspråk" 
           href="https://www.wikipendium.no/TDT4100_Objektorientert_Programmering/nb/"
+          alt="Link til informasjonside om Objektorientert Programmering"
           target="_blank">
             objektorientert programmering.
           </a>
@@ -199,6 +201,7 @@
           <!-- Link via tekst til OsloMet infoside om opptakskrav: https://www.oslomet.no/studier/soknad-og-opptak/opptakskrav-til-studier -->
           <a class="opptakskrav" 
           href="https://www.oslomet.no/studier/soknad-og-opptak/opptakskrav-til-studier"
+          alt="Link til informasjon om opptakskrav ved OsloMet"
           target="_blank">
             opptakskrav.
           </a>
@@ -241,6 +244,7 @@
                 <!-- Link i tekst til side om Java: https://www.w3schools.com/java/java_intro.asp -->
                 <a class="java" 
                 href="https://www.w3schools.com/java/java_intro.asp"
+                alt="Link til informasjon om Java"
                 target="_blank">
                   Java
                 </a> 
