--- a/accessibility.html
+++ b/accessibility.html
@@ -58,7 +58,7 @@
     <p>
       Vi har kjørt accessibility test gjennom lighthouse i google chrome. Dette gjøres for å sjekke hvor
       universelt utformet en nettside er. Likevel har denne testen begrensninger. Nedenfor er det derfor en 
-      liste over ting testen ikke beregner score ut fra, men som forbedrer universell utforming.
+      liste over ting testen ikke beregner score ut fra, men som vi har gjort, som forbedrer universell utforming.
       <!-- En 'unordered list' som sørger for at listeelementene vises som bullet points på siden -->
       <ul>
         <li>
