--- a/accessibility.html
+++ b/accessibility.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="no">
   <head>
     <title>
       DATA1200 - Hjemmeeksamen høst 2023 - Gruppe 24
@@ -19,7 +19,9 @@
           <!-- Dette er en link til den kopierte logoen som er plassert i img-mappen -->
           <!-- Logoen er gitt en alternativ tekst som vises hvis siden ikke kan laste inn logoen -->
           <!-- Når du klikker på logoen tas du til oslomet.no. Linken åpnes i en ny fane -->
-          <a class="oslomet-logo" href="https://www.oslomet.no/"
+          <a class="oslomet-logo" 
+          alt="OsloMet logo" 
+          href="https://www.oslomet.no/"
           target="_blank">
             <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
           </a>
