--- a/accessibility.html
+++ b/accessibility.html
@@ -240,7 +240,7 @@
                 </h2>
               </div>
               <div class="box box-6">
-                <img class="img" src="./img/accessibility_campus.jpg"  
+                <img class="img" src="./img/accessibility_campus.webp"  
                 alt="accessibility test" 
                 style="width: 100%;">
               <div class="overlay">
