Endre fra jpeg til webp

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="bilde-studiestart">
           <!-- Dersom bildet ikke kan lastes inn på nettsiden har vi lagt til en alternativ tekst som beskriver bildet-->
           <!-- Bredden på bildet er kodet slik at det skal oppta 100% av div'en det er plassert i -->
-          <img src="./img/studiestart-foto.jpg"
+          <img src="./img/studiestart-foto.webp"
           alt="bilde-studiestart" style="width: 100%;">
         </div>
       </div>
