--- a/campus.html
+++ b/campus.html
@@ -66,7 +66,7 @@
 
                 <a href="https://www.oslomet.no/var/oslomet/storage/images/_aliases/xxlarge/8/1/8/1/1818-8-nor-NO/pilestredet.jpg" target="_blank">
                   <div class="campus-bilde">
-                  <img class="bilde-pilestredet" src="/img/pilestredet-campus.jpeg" alt="OsloMet campus Pilestredet sett fra inngangen til gamle Frydenlundt">
+                  <img class="bilde-pilestredet" src="/img/pilestredet-campus.webp" alt="OsloMet campus Pilestredet sett fra inngangen til gamle Frydenlundt">
                   </div>
                 </a>
 
@@ -137,7 +137,7 @@
 
                 <a href="https://www.oslomet.no/var/oslomet/storage/images/_aliases/medium/4/5/8/2/42854-2-nor-NO/kjeller.jpg" target="_blank">
                   <div class="campus-bilde">
-                  <img class="bilde-kjeller" src="/img/kjeller-campus.jpeg" alt="OsloMet campus Kjeller">
+                  <img class="bilde-kjeller" src="/img/kjeller-campus.webp" alt="OsloMet campus Kjeller">
                   </div>
                 </a>
 
