--- a/topical.html
+++ b/topical.html
@@ -67,7 +67,7 @@
           <!-- Her ligger bildet som man ser på nettsiden -->
           <!-- Dersom netteleseren ikke kan laste inn bildet, vil det komme opp en alternativ tekst-->
           <!-- Bildet tar opp 100% av div'en det er plassert i -->
-          <img src="./img/informasjonsteknologi_bachelor.jpg" alt="Bilde programmering"
+          <img src="./img/informasjonsteknologi_bachelor.webp" alt="Bilde programmering"
           style="width: 100%;">
         </div>
         <!-- Her ligger link til det originale bildet -->
