--- a/accessibility.html
+++ b/accessibility.html
@@ -106,14 +106,14 @@
         og en klasse box-# som er unik for hver beholder/boks -->
         <div class="box box-1">
           <!-- Et screenshot av accessibility test -->
-          <img class="img" src="./img/accessibility-test-85.png"  
+          <img class="img" src="./img/accessibility-test-85.webp"  
           alt="accessibility test nr. 1" 
           style="width: 100%;">
         <div class="overlay">
           <div class="text">
             <!-- Link til en større versjon av testen. Denne åpnes i en tom fane -->
             <!-- Tekst og heading er link til dette bildet -->
-            <a href="./img/accessibility-test-85.png" target="_blank">
+            <a href="./img/accessibility-test-85.webp" target="_blank">
               <p>
                 Testen viser at vi mangler en alternativ tekst for OsloMet logoen, og accessibility scoren var 85.
               </p>
@@ -127,12 +127,12 @@
         </div>
       </div>
       <div class="box box-2">
-        <img class="img" src="./img/Code before.jpg"  
+        <img class="img" src="./img/Code before.webp"  
         alt="kode_før_endring" 
         style="width: 100%;">
           <div class="overlay">
             <div class="text">
-              <a href="./img/Code before.jpg" target="_blank">
+              <a href="./img/Code before.webpg" target="_blank">
                 <p>
                   Slik så koden ut uten alternativ tekst for bildet.
                 </p>
@@ -146,12 +146,12 @@
           </div>
         </div>
         <div class="box box-3">
-          <img class="img" src="./img/Code after.jpg" 
+          <img class="img" src="./img/Code after.webp" 
           alt="Kode_etter_endring"
           style="width: 100%;">
             <div class="overlay">
               <div class="text">
-                <a href="./img/Code after.jpg" target="_blank">
+                <a href="./img/Code after.webp" target="_blank">
                   <p>
                     Slik så koden ut etter vi la til alternativ tekst for OsloMet logoen.
                   </p>
@@ -165,12 +165,12 @@
             </div>
           </div>
           <div class="box box-4">
-            <img class="img" src="./img/accessibility_index.jpg" 
+            <img class="img" src="./img/accessibility_index.webp" 
             alt="Kode før"
             style="width: 100%;">
             <div class="overlay">
               <div class="text">
-                <a href="./img/accessibility_index.jpg" target="_blank">
+                <a href="./img/accessibility_index.webp" target="_blank">
                   <p>
                     Testen viser en accessibility score på 97.
                   </p>
@@ -204,12 +204,12 @@
             </h2>
           </div>
           <div class="box box-5">
-            <img class="img" src="./img/accessibility_topical.jpg"  
+            <img class="img" src="./img/accessibility_topical.webp"  
             alt="accessibility test" 
             style="width: 100%;">
               <div class="overlay">
                 <div class="text">
-                  <a href="./img/accessibility_topical.jpg" target="_blank">
+                  <a href="./img/accessibility_topical.webp" target="_blank">
                     <p>
                       Testen viser en score på 97 etter vi la til alternativ tekst for OsloMet logoen.
                     </p>
@@ -245,7 +245,7 @@
                 style="width: 100%;">
               <div class="overlay">
                 <div class="text">
-                  <a href="./img/accessibility_campus.jpg" target="_blank">
+                  <a href="./img/accessibility_campus.webp" target="_blank">
                     <p>
                       Testen viser en score på 100 etter vi la til alternativ tekst for OsloMet logoen.
                     </p>
