--- a/accessibility.html
+++ b/accessibility.html
@@ -132,7 +132,7 @@
         style="width: 100%;">
           <div class="overlay">
             <div class="text">
-              <a href="./img/Code before.webpg" target="_blank">
+              <a href="./img/Code before.webp" target="_blank">
                 <p>
                   Slik så koden ut uten alternativ tekst for bildet.
                 </p>
