--- a/accessibility.html
+++ b/accessibility.html
@@ -222,6 +222,29 @@
                 </div>
               </div>
             </div>
+            <div class="box box-5">
+              <img class="img" src="/img/Topical-100  (1).webp" alt="accessibility test etter at performancen er forbedret"
+              style="width: 100%;">
+              <div class="overlay">
+                <div class="text">
+                  <a href="/img/Topical-100  (1).webp" target="_blank">
+                    <p>
+                      Testen etter at vi har endret bildene på siden fra .jpeg eller .png til .webp viser at accessibilityen og performancen er bedret.
+                    </p>
+                    <h3>
+                      <i>
+                        Forstørr testen
+                      </i>
+                    </h3>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="forklaring">
+              <h2>
+                Vi så at performancen scoret litt lavt, og da foreslo lighthouse at vi skulle endre bildene til webp. 
+              </h2>
+            </div>
           </div>
         </div>
         <!-- Dette er checkboks 3 -->
@@ -257,6 +280,29 @@
                   </a>
                 </div>
               </div>
+            </div>
+            <div class="box box-6">
+              <img class="img" src="/img/campus-100 .webp" alt="bilde av accessibility-testen av campus.html etter at vi har forbedret den"
+              style="width: 100%;">
+              <div class="overlay">
+                <div class="text">
+                  <a href="/img/campus-100 .webp" target="_blank">
+                    <p>
+                      Testen etter at vi har endret bildene på siden fra .jpeg eller .png til .webp viser at accessibilityen og performancen er bedret.
+                    </p>
+                    <h3>
+                      <i>
+                        Forstørr testen
+                      </i>
+                    </h3>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="forklaring">
+              <h2>
+                Vi så at performancen scoret litt lavt, og da foreslo lighthouse at vi skulle endre bildene til webp. 
+              </h2>
             </div>
           </div>
         </div> 
