--- a/accessibility.html
+++ b/accessibility.html
@@ -183,7 +183,7 @@
               </div>
             </div>
           </div>
-          <div class="box box-5">
+          <div class="box box-4">
             <img class="img" src="/img/index-100 .webp" alt="accessibility test etter at performancen er forbedret"
             style="width: 100%;">
             <div class="overlay">
@@ -220,7 +220,7 @@
         <!-- This is the container of the content inside the "innledning"-checkbox -->
         <!-- This is only shown when the checkbox is open -->
       <div class="content">
-        <div id="accessibility-container" class="accessibility-container">
+        <div id="accessibility-container" class="accessibility-container-2">
           <div class="forklaring">
             <h2>
               Vi fikk samme "feil" som for index.html når vi kjørte accessibility test. 
@@ -279,7 +279,7 @@
             </h2>
           </label>
           <div class="content">
-            <div id="accessibility-container" class="accessibility-container">
+            <div id="accessibility-container" class="accessibility-container-2">
               <div class="forklaring">
                 <h2>
                   Vi fikk samme "feil" som for index.html og topical.html når vi kjørte accessibility test. 
