--- a/accessibility.html
+++ b/accessibility.html
@@ -220,7 +220,7 @@
         <!-- This is the container of the content inside the "innledning"-checkbox -->
         <!-- This is only shown when the checkbox is open -->
       <div class="content">
-        <div id="accessibility-container" class="accessibility-container-2">
+        <div id="accessibility-container" class="accessibility-container">
           <div class="forklaring">
             <h2>
               Vi fikk samme "feil" som for index.html når vi kjørte accessibility test. 
@@ -252,7 +252,7 @@
                 <div class="text">
                   <a href="/img/Topical-100  (1).webp" target="_blank">
                     <p>
-                      Testen etter at vi har endret bildene på siden fra .jpeg eller .png til .webp viser at accessibilityen og performancen er bedret.
+                      Testen etter at vi har endret bildene på siden fra .jpeg eller .png til .webp og vi ser at performancen er litt dårligere, men accessibilityen er bedret.
                     </p>
                     <h3>
                       <i>
@@ -265,7 +265,7 @@
             </div>
             <div class="forklaring">
               <h2>
-                Vi så at performancen scoret litt lavt, og da foreslo lighthouse at vi skulle endre bildene til webp. 
+                Vi endret også bildet fra jpeg til webp på denne siden, men her endret det performancen fra 100% til 96% 
               </h2>
             </div>
           </div>
@@ -279,7 +279,7 @@
             </h2>
           </label>
           <div class="content">
-            <div id="accessibility-container" class="accessibility-container-2">
+            <div id="accessibility-container" class="accessibility-container">
               <div class="forklaring">
                 <h2>
                   Vi fikk samme "feil" som for index.html og topical.html når vi kjørte accessibility test. 
