Endret css og tekst
Endre skriftstørrelse for hele body i css og endre teksten under bildene på campus.html

--- a/campus.html
+++ b/campus.html
@@ -94,7 +94,7 @@
             href="https://www.oslomet.no/var/oslomet/storage/images/_aliases/xxlarge/8/1/8/1/1818-8-nor-NO/pilestredet.jpg"
             target="_blank">
             <!-- Fotografen av bildet -->
-              Foto: Ukjent/Hentet fra OsloMet
+              Foto: Ukjent/Hentet fra OsloMet. Trykk på bildet eller denne linken for å åpne originalbilde.
             </a>
             <!--Informasjonen om campuset som skal komme når du klikker i nedtrekksmenyen!-->
           </div>
@@ -163,7 +163,7 @@
             href="https://www.oslomet.no/var/oslomet/storage/images/_aliases/medium/4/5/8/2/42854-2-nor-NO/kjeller.jpg"
             target="_blank">
             <!-- This is the photographer of the original image -->
-              Foto: Ukjent/Hentet fra OsloMet
+              Foto: Ukjent/Hentet fra OsloMet. Trykk på bildet eller denne linken for å åpne originalbilde.
             </a>
           </div>
             <p class="campus-info">
