--- a/accessibility.html
+++ b/accessibility.html
@@ -172,7 +172,7 @@
               <div class="text">
                 <a href="./img/accessibility_index.webp" target="_blank">
                   <p>
-                    Testen viser en accessibility score på 97.
+                    Testen etter at vi la til alt-tekst på OsloMet logoen viser en accessibility score på 97.
                   </p>
                   <h3>
                     <i>
